--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hd_react_test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://desipossa.github.io/hd_react_test/",
+  "homepage": "https://desipossa.github.io/react_hd_00_test/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
